# al-gner

./: __init__.py  pyproject.toml  requirements.txt
nemo_forced_aligner/: constants.py
src/: aligner.py
src/nemo_forced_aligner/: __init__.py  aligner.py
src/nemo_forced_aligner/utils/: __init__.py  data_prep.py  srt_utils.py  viterbi_decoding.py
src/utils/: data_prep.py  srt_utils.py
utils/: viterbi_decoding.py
