# pyproject.toml - Updated for NeMo 2.3.0

[project]
name = "nemo-forced-aligner"
version = "0.1.0"
description = "Simple NeMo forced aligner for Kaggle/Colab integration"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "Apache-2.0" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = [
    "nemo",
    "forced-alignment",
    "asr",
    "speech-recognition",
    "kaggle",
    "colab"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

# Minimal dependencies - using NeMo 2.3.0
dependencies = [
    "nemo_toolkit[asr]",
    "omegaconf",        # Configuration management
]

# Optional dependencies
[project.optional-dependencies]
# GPU acceleration
#gpu = [
#    "numba>=0.56.0",
#    "pynvml>=11.0.0",
#]


# Full dependency list (including everything from nemo_toolkit[asr])
#full = [
    # The following are all included with nemo_toolkit[asr]==2.3.0
    # Listed here for reference and documentation
    # "braceexpand",
    # "editdistance",
    # "einops",
    # "g2p_en",
    # "jiwer",
    # "kaldi-python-io",
    # "kaldiio",
    # "lhotse>=1.26.0",
    # "librosa>=0.10.1",
    # "marshmallow",
    # "optuna",
    # "packaging",
    # "pyannote.core",
    # "pyannote.metrics",
    # "pydub",
    # "pyloudnorm",
    # "resampy",
    # "ruamel.yaml",
    # "scipy>=0.14",
    # "soundfile",
    # "sox<=1.5.0",
    # "texterrors<1.0.0",
#]

[project.urls]
Homepage = "https://github.com/jamanz/al-gner"
Repository = "https://github.com/jamanz/al-gner.git"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["nemo_forced_aligner"]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

# Installation notes:
# - nemo_toolkit[asr]==2.3.0 brings in all necessary dependencies
# - Use 'pip install .' for minimal installation
# - Use 'pip install .[gpu]' for GPU acceleration
# - Use 'pip install .[dev]' for development