[project]
name = "nemo-forced-aligner"
version = "0.1.0"
description = "Simple NeMo forced aligner for Kaggle/Colab integration"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "Apache-2.0" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = [
    "nemo",
    "forced-alignment",
    "asr",
    "speech-recognition",
    "kaggle",
    "colab"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "nemo_toolkit[asr]",
    "omegaconf",
]

[project.urls]
Homepage = "https://github.com/jamanz/al-gner"
Repository = "https://github.com/jamanz/al-gner.git"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"